Sabrina/update spec (#56)
- update both events and users swagger.json specs to the latest
- re-generate APIs, with `Idempotency-Key` as header parameter, which
becomes part of the method parameters
- remove `idempotencyKey` from request options
